--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -26,53 +26,18 @@
 		<app-new-consultation-expansion-section id="motivo"
 			[title]="'ambulatoria.paciente.nueva-consulta.motivo.TITLE' | translate" icon="sms_failed"
 			[isEmpty]="motivoNuevaConsultaService.isEmpty()">
+			<div>
+				<h5 class="recomendado" [translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
 
-			<app-new-document-section sectionImportance="ambulatoria.paciente.nueva-consulta.RECOMENDADO">
-
-				<ng-container concept-form>
-					<ng-container *ngIf="!motivoNuevaConsultaService.getSnomedConcept() else mainMotivoConsulta">
-						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else motivoTypeaheadSearch"
-							[label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
-							(search)="motivoNuevaConsultaService.openSearchDialog($event)">
-						</app-concepts-search>
-
-						<ng-template #motivoTypeaheadSearch>
-							<app-concept-typeahead-search [ecl]="motivoNuevaConsultaService.getECL()"
-								[placeholder]="'ambulatoria.paciente.nueva-consulta.motivo.SEARCH_PLACEHOLDER'"
-								(conceptSelected)="motivoNuevaConsultaService.setConcept($event)">
-							</app-concept-typeahead-search>
-						</ng-template>
-					</ng-container>
-
-					<ng-template #mainMotivoConsulta>
-						<form [formGroup]="motivoNuevaConsultaService.getForm()"
-							(ngSubmit)="motivoNuevaConsultaService.addToList()">
-							<mat-form-field appearance="outline">
-								<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
-								</mat-label>
-								<input id="motivo-input" matInput type="text" formControlName="snomed" name="snomed"
-									readonly matTooltip="{{motivoNuevaConsultaService.getSnomedConcept().pt }}">
-								<button id="clear-motivo" mat-button matSuffix color="warn" mat-icon-button
-									(click)="motivoNuevaConsultaService.resetForm()">
-									<mat-icon>close</mat-icon>
-								</button>
-							</mat-form-field>
-							<div align="end">
-								<button id="submit_motivos" class="uppercase" mat-raised-button color="primary"
-									type="submit">
-									<span class="uppercase"
-										[translate]="'ambulatoria.paciente.nueva-consulta.motivo.ADD'"></span>
-								</button>
-							</div>
-						</form>
-					</ng-template>
-				</ng-container>
-				<app-document-section-table data-display
-					[tableTitle]="'ambulatoria.paciente.nueva-consulta.motivo.table.TITLE'"
-					[columns]="motivoNuevaConsultaService.getTableColumnConfig()"
+				<app-document-section-table [columns]="motivoNuevaConsultaService.getTableColumnConfig()"
 					[data]="motivoNuevaConsultaService.getMotivosConsulta()">
 				</app-document-section-table>
-			</app-new-document-section>
+
+				<button mat-button type="button" id="add-reason-button" color="primary" class="add-button"
+					(click)="addReason()">
+					+ {{ 'ambulatoria.paciente.nueva-consulta.motivo.ADD' | translate }}
+				</button>
+			</div>
 		</app-new-consultation-expansion-section>
 
 		<app-new-consultation-expansion-section id="problemas"
