tg-7669 [FE] Agregar logica de permisos para los nuevos roles

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/card-estudios/card-estudios.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/card-estudios/card-estudios.component.html
@@ -5,7 +5,7 @@
     <app-no-data></app-no-data>
 </ng-template>
 <app-summary-card id="estudios" [header]="estudios"
-                                [canEdit]="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA']"
+                                [canEdit]="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA', 'PERSONAL_DE_IMAGENES', 'PERSONAL_DE_LABORATORIO']"
 								[matMenu]="newPrescriptionMenu"
 								[menu]="true">
 
