tg-7635. [FE] Un título de sección que se contrae-expande puede mostrar la etiqueta "recomendado"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/new-consultation-expansion-section/new-consultation-expansion-section.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/new-consultation-expansion-section/new-consultation-expansion-section.component.html
@@ -3,9 +3,14 @@
         <mat-divider *ngIf="!hideBorder"></mat-divider>
         <div fxLayout="row" fxLayoutAlign="space-between center"
             [ngClass]="{'closed-panel' : isEmpty && collapsed && !fixedExpanded}">
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-                <mat-icon fontSet="material-icons-outlined">{{ icon }}</mat-icon>
-                <span class="title">{{ title }}</span>
+            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <mat-icon fontSet="material-icons-outlined">{{ icon }}</mat-icon>
+                    <span class="title">{{ title }}</span>
+                </div>
+                <span *ngIf="recommend" class="recommend">
+                    *{{ 'historia-clinica.new-consultation-expansion-section.RECOMMEND' | translate }}
+                </span>
             </div>
             <mat-icon *ngIf="isEmpty && collapsed && !fixedExpanded">add</mat-icon>
             <mat-icon *ngIf="!isEmpty && collapsed && !fixedExpanded">expand_more</mat-icon>
