--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/new-consultation-expansion-section/new-consultation-expansion-section.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/new-consultation-expansion-section/new-consultation-expansion-section.component.scss
@@ -18,4 +18,14 @@
     span {
         font-size: 18px;
     }
+
+    .recommend {
+        font-size: 14px;
+    }
+}
+
+.recommend {
+    color: rgba(0, 0, 0, 0.38);
+    font-size: 14px;
+    font-weight: 400;
 }
