--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -25,8 +25,8 @@
 
 		<app-new-consultation-expansion-section id="reasons"
 			[title]="'odontologia.odontology-consultation-dock-popup.REASON_TITLE' | translate" icon="sms_failed"
-			[isEmpty]="reasonNewConsultationService.isEmpty()">
-			<app-new-document-section sectionImportance="odontologia.odontology-consultation-dock-popup.RECOMMENDED">
+			[isEmpty]="reasonNewConsultationService.isEmpty()" [recommend]="true">
+			<app-new-document-section>
 
 				<ng-container concept-form>
 
