--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -211,7 +211,7 @@
 			<mat-card-content>
 				<mat-tab-group (selectedTabChange)="onTabChanged($event)"
 					*ngIf="hasInternmentEpisodeInThisInstitution !== undefined">
-					<mat-tab id="tab_resumen" *ngIf="!hasInternmentEpisodeInThisInstitution">
+					<mat-tab id="tab_resumen" *ngIf="!hasInternmentEpisodeInThisInstitution && !(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						<ng-template mat-tab-label>
 							<span>{{ 'ambulatoria.paciente.resumen.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
@@ -219,7 +219,7 @@
 							<app-resumen [patientExternalSummary]="patientExternalSummary"></app-resumen>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_internacion" *ngIf="hasInternmentEpisodeInThisInstitution">
+					<mat-tab id="tab_internacion" *ngIf="hasInternmentEpisodeInThisInstitution && !(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						<ng-template mat-tab-label>
 							<span>{{ 'ambulatoria.paciente.internacion.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
@@ -228,7 +228,7 @@
 							</app-internacion-paciente>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_indications">
+					<mat-tab id="tab_indications" *ngIf="!(hasPicturesStaffRole || hasLaboratoryStaffRole)">
 						<ng-template mat-tab-label>
 							<span>{{ 'indicacion.TITLE' | translate | uppercase }}</span>
 						</ng-template>
@@ -244,7 +244,7 @@
 							</app-card-medicaciones>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_studies">
+					<mat-tab id="tab_studies" *ngIf="!hasPharmacyStaffRole">
 						<ng-template mat-tab-label>
 							<span>{{ 'ambulatoria.paciente.studies.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
@@ -256,7 +256,7 @@
 							<app-card-indicaciones [patientId]="patientId" *ngIf="false"></app-card-indicaciones>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_problemas">
+					<mat-tab id="tab_problemas" *ngIf="!(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						<ng-template mat-tab-label>
 							<span>{{ 'ambulatoria.paciente.problemas.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
@@ -266,7 +266,7 @@
 							</app-problemas>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_vacunas">
+					<mat-tab id="tab_vacunas" *ngIf="!(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						<ng-template mat-tab-label>
 							<span>{{ 'ambulatoria.paciente.vacunas.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
@@ -285,7 +285,7 @@
 							</ng-container>
 						</ng-template>
 					</mat-tab>
-					<mat-tab id="tab_odontologia" *ngIf="odontologyEnabled">
+					<mat-tab id="tab_odontologia" *ngIf="odontologyEnabled && !(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						<ng-template mat-tab-label>
 							<span>ODONTOLOGÍA</span>
 						</ng-template>
