tg-7731 [FE] Personal de farmacia puede descargar una receta

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -109,7 +109,7 @@
 				<ng-template #hasOdontologyRole>
 					<button id="acciones_odontologo" mat-flat-button color="primary" mat-button
 						[matMenuTriggerFor]="menu"
-						*ngIf="hasInternmentEpisodeInThisInstitution && !epicrisisDoc?.confirmed">
+						*ngIf="hasInternmentEpisodeInThisInstitution && !epicrisisDoc?.confirmed && !(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						{{ 'ambulatoria.paciente.card.buttons.actions.ACTIONS' | translate | uppercase }}
 					</button>
 				</ng-template>
