tg-7651 [P1] Error 400 al buscar una agenda de un profesional con rol Administrador de Agenda

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/calendar-professional-view-dock-popup/calendar-professional-view-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/calendar-professional-view-dock-popup/calendar-professional-view-dock-popup.component.html
@@ -23,7 +23,8 @@
                 </button>
             </mat-form-field>
         </div>
-        <app-agenda *ngIf="agendaSelected" class="agenda" [canCreateAppoinment]="false" [idAgenda]="agendaSelected.id" [showAll]="false" [view]="calendarViewEnum.Day">
+        <app-agenda *ngIf="agendaSelected" class="agenda" [canCreateAppoinment]="false" [idAgenda]="agendaSelected.id"
+            [showAll]="false" [view]="calendarViewEnum.Day" [professionalId]="this.professionalId">
         </app-agenda>
     </div>
 </app-dock-popup>
