--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -27,7 +27,7 @@
 					<button type="button" mat-icon-button color="primary"
 						*appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']"
 						[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + params.appointmentData?.patient?.id"
-						[state]="{ appointmentCoverageInfo: summaryCoverageData }" (click)="closeDialog()">
+						(click)="closeDialog()">
 						<span class="mat-body subtitle-size">
 							{{'turnos.appointment.BUTTON_CLINICAL_HISTORY' | translate}}
 						</span>
