tg-7742 Migrar bloqueo de agendas SOMA

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/components/select-agenda/select-agenda.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/components/select-agenda/select-agenda.component.html
@@ -42,8 +42,12 @@
 			name="edit_agenda" (click)="goToEditAgenda()">
 			<mat-icon>edit</mat-icon>
 		</button>
-		<button mat-flat-button color="warn" *appHasRole="['ADMINISTRADOR_AGENDA']" id="delete_agenda"
-			name="delete_agenda" (click)="deleteAgenda()">
+		<button mat-flat-button color="warn" *appHasRole="['ADMINISTRADOR_AGENDA', 'ADMINISTRATIVO']" id="block_agenda"
+			(click)="blockAgenda()">
+			<mat-icon>block</mat-icon>
+		</button>
+		<button mat-flat-button color="warn" *appHasRole="['ADMINISTRADOR_AGENDA']" id="delete_agenda" name="delete_agenda"
+		        (click)="deleteAgenda()">
 			<mat-icon>delete</mat-icon>
 		</button>
 	</div>
